<resources>
    <string name="app_name">BallGame</string>
    <string name="new_polygon">New Polygon</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="draw_ball">Tap screen to draw ball starting position</string>
    <string name="draw_obstacles">Tap screen to draw obstacles position</string>
    <string name="draw_black_holes">Tap screen to draw black holes position</string>
    <string name="draw_winning_hole">Tap screen to draw winning hole position</string>
    <string name="save_polygon">Tap screen to save polygon</string>
    <string name="obstacles_left">obstacles left!</string>
    <string name="black_holes_left">black holes left!</string>
    <string name="save_polygon_dialog">Save Polygon</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_polygon_game">Choose Polygon to Play the Game</string>
    <string name="invalid_draw">Can\'t touch this!</string>
    <string name="won_the_game">You\'ve succeeded, the ball is saved!</string>
    <string name="lost_the_game">Death is approaching…Tap screen to try again</string>
    <string name="choose_polygon_statistics">Choose Polygon to display statistics</string>
    <string name="reset_polygon_statistics">Reset polygon statistics</string>
    <string name="reset_statistics">Reset complete statistics</string>
    <string name="save_score_dialog">Save Score</string>
    <string name="friction_factor">Friction factor</string>
    <string name="collision_factor">Collision factor</string>
    <string name="friction_factor_default">0.9</string>
    <string name="collision_factor_default">0.7</string>
    <string name="default_values">Reset to Default values</string>
    <string name="empty_input">No input, Eh?</string>
    <string name="input_polygon_name">Enter polygon name</string>
    <string name="input_player_name">Enter your name</string>
    <string name="delete">Delete</string>
    <string name="delete_polygon_dialog">Delete Polygon</string>
    <string name="draw_ball_button">Draw ball</string>
    <string name="draw_obstacles_button">Draw obstacles</string>
    <string name="draw_black_holes_button">Draw black holes</string>
    <string name="draw_winning_hole_button">Draw winning hole</string>
    <string name="save_polygon_button">Save Polygon</string>
    <string name="toolbar_info">Choose object to draw…With Long Click you can toggle toolbar</string>s
    <string name="input_ball_radius">Enter ball radius</string>
    <string name="input_obstacle_width">Enter obstacle width</string>
    <string name="input_obstacle_height">Enter obstacle height</string>
    <string name="input_black_hole_radius">Enter black hole radius</string>
    <string name="input_winning_hole_radius">Enter winning hole radius</string>
    <string name="input_dimension_dialog">Set Dimension</string>
    <string name="set">Set</string>
    <string name="no_ball_draw">Ball isn\'t drawed</string>
    <string name="no_winning_hole_draw">Winning hole isn\'t drawed</string>
    <string name="one_time_draw">Only one can exist…With Long Click you can toggle toolbar</string>
</resources>
